Add app icons meta and og tags

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Wystaw śmieci - Zielonka</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/icons/favicon.ico">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta property="og:url" content="https://wystaw-smieci.pl/zielonka/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="">
+  <meta property="og:description" content="">
+  <meta property="og:image" content="https://wystaw-smieci.pl/zielonka/assets/img/app-green.jpg">
+  <link rel="canonical" href="https://wystaw-smieci.pl/zielonka/">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icons/favicon-16x16.png">
+  <!-- Add to home screen for Android and modern mobile browsers -->
+  <link rel="manifest" href="assets/manifest.json">
+  <meta name="theme-color" content="#303F9F">
+  <!-- Add to home screen for Safari on iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="">
+  <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon-152x152.png">
+  <link rel="mask-icon" href="assets/img/icons/safari-pinned-tab.svg" color="#5bbad5">
+  <!-- Add to home screen for Windows -->
+  <meta name="msapplication-TileImage" content="assets/img/icons/mstile-144x144.png">
+  <meta name="msapplication-TileColor" content="#da532c">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
