Change them color

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icons/favicon-16x16.png">
   <!-- Add to home screen for Android and modern mobile browsers -->
   <link rel="manifest" href="assets/manifest.json">
-  <meta name="theme-color" content="#303F9F">
+  <meta name="theme-color" content="#3F51B5">
   <!-- Add to home screen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
