Add descriptions, keywords, dir attribute and noscript

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/icons/favicon.ico">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Dzięki tej aplikacji już nigdy nie zapomnisz o wystawieniu śmieci oraz będziesz miał wgląd we wszystkie strefy i terminy odbioru nieczystości.">
+  <meta name="keywords" content="śmieci, nieczystości, segregowalne, wystaw, zielonka">
   <meta property="og:url" content="https://wystaw-smieci.pl/zielonka/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="">
-  <meta property="og:description" content="">
+  <meta property="og:title" content="Wystaw śmieci (BETA) - Zielonka">
+  <meta property="og:description" content="Dzięki tej aplikacji już nigdy nie zapomnisz o wystawieniu śmieci oraz będziesz miał wgląd we wszystkie strefy i terminy odbioru nieczystości.">
   <meta property="og:image" content="https://wystaw-smieci.pl/zielonka/assets/img/app-green.jpg">
   <link rel="canonical" href="https://wystaw-smieci.pl/zielonka/">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icons/favicon-32x32.png">
@@ -31,7 +31,10 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
-<body>
+<body dir="ltr">
+  <noscript style="display: block;margin-top: 3em;font-size: 1.2em;text-align: center;font-weight: bold;">
+      Włącz JavaScript aby korzystać z aplikacji!
+  </noscript>
   <app-root></app-root>
 </body>
 </html>
