--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,37 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body dir="ltr">
+  <script>
+    //  returns version of IE or false, if browser is not Internet Explorer
+    function detectIE() {
+      var ua = window.navigator.userAgent;
+      var msie = ua.indexOf('MSIE ');
+      if (msie > 0) {
+        // IE 10 or older => return version number
+        return parseInt(ua.substring(msie + 5, ua.indexOf('.', msie)), 10);
+      }
+
+      var trident = ua.indexOf('Trident/');
+      if (trident > 0) {
+        // IE 11 => return version number
+        var rv = ua.indexOf('rv:');
+        return parseInt(ua.substring(rv + 3, ua.indexOf('.', rv)), 10);
+      }
+
+      // const edge = ua.indexOf('Edge/');
+      // if (edge > 0) {
+      //   // Edge (IE 12+) => return version number
+      //   return parseInt(ua.substring(edge + 5, ua.indexOf('.', edge)), 10);
+      // }
+
+      // other browser
+      return false;
+    }
+    
+    if (detectIE() !== false) {
+      document.querySelector('body').innerHTML = '<div style="margin-top: 3em;font-size: 1.2em;text-align: center;font-weight: bold;">Ta aplikacja nie obsługuje przeglądarki Internet Explorer 11 i starszych:(</div>';
+    }
+  </script>
   <noscript style="display: block;margin-top: 3em;font-size: 1.2em;text-align: center;font-weight: bold;">
       Włącz JavaScript aby korzystać z aplikacji!
   </noscript>
