Change canonical link

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <meta property="og:title" content="Wystaw śmieci (BETA) - Zielonka">
   <meta property="og:description" content="Dzięki tej aplikacji już nigdy nie zapomnisz o wystawieniu śmieci oraz będziesz miał wgląd we wszystkie strefy i terminy odbioru nieczystości.">
   <meta property="og:image" content="https://wystaw-smieci.pl/zielonka/assets/img/app-green.jpg">
-  <link rel="canonical" href="https://wystaw-smieci.pl/zielonka/">
+  <link rel="canonical" href="https://zielonka.wystaw-smieci.pl">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icons/favicon-16x16.png">
   <!-- Add to home screen for Android and modern mobile browsers -->
