--- a/src/index.html
+++ b/src/index.html
@@ -15,20 +15,16 @@
   <meta property="og:description" content="Dzięki tej aplikacji już nigdy nie zapomnisz o wystawieniu śmieci oraz będziesz miał wgląd we wszystkie strefy i terminy odbioru nieczystości.">
   <meta property="og:image" content="https://wystaw-smieci.pl/zielonka/assets/img/app-green.jpg">
   <link rel="canonical" href="https://zielonka.wystaw-smieci.pl">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/img/icons/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icons/favicon-16x16.png">
-  <!-- Add to home screen for Android and modern mobile browsers -->
+  <link rel="mask-icon" href="assets/img/icons/safari-pinned-tab.svg" color="#4caf50">
+  <meta name="msapplication-config" content="assets/img/icons/browserconfig.xml">
+  <meta name="msapplication-TileColor" content="#2d89ef">
+  <meta name="msapplication-TileImage" content="assets/img/icons/mstile-144x144.png">
   <link rel="manifest" href="assets/manifest.json">
   <meta name="theme-color" content="#3F51B5">
-  <!-- Add to home screen for Safari on iOS -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="">
-  <link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon-152x152.png">
-  <link rel="mask-icon" href="assets/img/icons/safari-pinned-tab.svg" color="#5bbad5">
-  <!-- Add to home screen for Windows -->
-  <meta name="msapplication-TileImage" content="assets/img/icons/mstile-144x144.png">
-  <meta name="msapplication-TileColor" content="#da532c">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body dir="ltr">
