Add OneSignal script

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,15 @@
   <link rel="manifest" href="assets/manifest.json">
   <meta name="theme-color" content="#3F51B5">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=latin-ext" rel="stylesheet">
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+  <script>
+    var OneSignal = window.OneSignal || [];
+    OneSignal.push(function() {
+      OneSignal.init({
+        appId: "396278aa-a2ed-4602-af64-a6311c0e4230",
+      });
+    });
+  </script>
 </head>
 <body dir="ltr">
   <script>
