--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,11 @@
   <link rel="icon" type="image/png" sizes="192x192" href="assets/img/icons/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icons/favicon-16x16.png">
   <link rel="mask-icon" href="assets/img/icons/safari-pinned-tab.svg" color="#4caf50">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="application-name" content="Śmieci">
+  <meta name="apple-mobile-web-app-title" content="Śmieci">
+  <meta name="msapplication-starturl" content="index.html">
   <meta name="msapplication-config" content="assets/img/icons/browserconfig.xml">
   <meta name="msapplication-TileColor" content="#2d89ef">
   <meta name="msapplication-TileImage" content="assets/img/icons/mstile-144x144.png">
